# KineticXGPU

./: .gitignore  LICENSE  README.md  fBE_log.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: fBE_log-checkpoint.ipynb
configs/: fbe_benchmark.json  paper_benchmark.json  quickstart.json
examples/: api_collision.py
notebooks/: fBE_log.ipynb  fBEv2.ipynb  plots.ipynb
results/CPU-GPU_benchmarks/: best_comparison_boson_raw_N32_48_64_96_Nmu18_warm20_rep20_with_fp32gpu.csv  collision_benchmark_cpu_float32_Ng12_batch16_qmin1e-03_qmax1e+02_projection_off.csv  collision_benchmark_cpu_float64_Ng12_batch16_qmin1e-03_qmax1e+02_projection_off.csv  collision_benchmark_cuda_float32_Ng12_batch16_qmin1e-03_qmax1e+02_projection_off.csv  collision_benchmark_cuda_float64_Ng12_batch16_qmin1e-03_qmax1e+02_projection_off.csv
results2/hybrid_saved_N180_lamself1.0e-04_Ng12_batch36_nw400_rk4spw1_af6.0e+04/: metadata.json  trajectory.pt
results2/hybrid_saved_N180_lamself1.0e-05_Ng12_batch36_nw400_rk4spw1_af6.0e+04/: metadata.json  trajectory.pt
results2/hybrid_saved_N180_lamself5.0e-04_Ng12_batch36_nw400_rk4spw1_af6.0e+04/: metadata.json  trajectory.pt
results2/hybrid_saved_N180_lamself5.0e-05_Ng12_batch36_nw400_rk4spw1_af6.0e+04/: metadata.json  trajectory.pt
scripts/: benchmark.py  benchmark_best_comparison.py  plot_figures.py  plots.py  plots_solver.py  run_solver.py
src/: benchmark.py  cBE_solver.py  collision.py  collision_log.py  cosmology.py  func.py  func2.py  grid_log.py  kinematics_torch.py  solver.py  thermodynamics.py
tests/: test_api_smoke.py
(+35 files in other folders)
